hphp/hack/test/typecheck/reactive/rx_if_implements4.php.exp
File "rx_if_implements4.php", line 8, characters 19-26:
Method cannot be marked as reactive and conditionally reactive at the same time. (NastCheck[3060])
